# foo-hack

./: .gitignore  README.md
frontend/: package-lock.json  package.json
frontend/public/: auction.wasm  radichess.wasm
frontend/src/: App.css  App.js  App.tsx  index.js
frontend/src/components/: CreateAccountModal.js  CreateAccountModal.jsx  GameItem.js  GameList.js  GameTabs.js  GameTabs.jsx  Header.js  Header.jsx  Loader.js  Loader.jsx  TabPanel.js  TabPanel.jsx
frontend/src/components/GameItem/: GameItem.jsx  GameItem.styles.scss
frontend/src/components/GameList/: GameList.actions.js  GameList.js  GameList.jsx  GameList.utils.js
frontend/src/pte-specifics/: address-mappings.js  address-mappings.ts  config.js  config.ts
frontend/src/pte-specifics/commands/: account.js  account.ts  component.js  component.ts  game.js  index.js  index.ts  package.js  player.js
frontend/src/pte-specifics/helpers/: badge.helpers.js  game.helpers.js
frontend/src/routes/: Admin.js  Game.js  Landing.js  Leaderboard.js
frontend/src/routes/Admin/: AddressItem.jsx  Admin.actions.js  Admin.js  Admin.jsx  Admin.styles.scss  index.js
frontend/src/routes/Game/: Game.actions.js  Game.js  Game.jsx  Game.utils.js  (+5 more)
scrypto/auction/: Cargo.toml
scrypto/auction/src/: lib.rs
scrypto/auction/tests/: lib.rs
scrypto/radichess/: Cargo.toml  chessscript.sh  move_test.sh  quickchecks.sh  quickmate.sh
scrypto/radichess/src/: README.txt  board.rs  chess.rs  coordinate.rs  lib.rs  piece.rs  radichess.rs
scrypto/radichess/transactions/: create.rtm  get_fen.rtm  list_games.rtm  list_games_by_player.rtm  list_players.rtm  register_player.rtm  start_game.rtm
scrypto/src/: lib.rs
(+11 files in other folders)
